Closed
Bug 1028458
Opened 6 years ago
Closed 6 years ago
[B2G][Flame 2.0] crash in speex_resampler_get_rate - mute getUserMedia audio stream causes the browser to crash
Categories
(Core :: WebRTC: Audio/Video, defect, critical)
Tracking
()
People
(Reporter: psiphantong, Assigned: padenot)
References
Details
(Keywords: crash, regression, reproducible, Whiteboard: [2.0-flame-test-run-2])
Crash Data
Attachments
(3 files)
This bug was filed from the Socorro interface and is report bp-4d9ad748-ce95-4b73-b40f-6aa4a2140620. ============================================================= When the user goes to http://mozilla.github.io/qa-testcase-data/webapi/webrtc/mutedaudiotrack.html, the browser will crash Repro Steps: 1) Update a Flame to 20140620000202 2) Go to Browser 3) Go to http://mozilla.github.io/qa-testcase-data/webapi/webrtc/mutedaudiotrack.html 4) Tap share Actual: the browser crash, after permission share Expected: the browser should not crash, after permission share Environmental Variables: Device: Flame 2.0 Build ID: 20140620000202 Gaia: c5dd47e3f9e18872961946735fdbc071a1656ac9 Gecko: 71b1b4b0850c Version: 32.0a2 (2.0) Firmware Version: v121-2 User Agent for Flame 2.0: Mozilla/5.0 (Mobile; rv:32.0) Gecko/32.0 Firefox/32.0 Repro frequency: 100% Link to failed test case: https://moztrap.mozilla.org/manage/case/9979/ See attached: screenshot,logcat
Reporter | ||
Comment 1•6 years ago
|
||
This issue DOES reproduce on Flame 2.1, Buri 2.1, Open C 2.1, Buri 2.0, and Open C 2.0 When going to http://mozilla.github.io/qa-testcase-data/webapi/webrtc/mutedaudiotrack.html and hitting refresh on the page the phone will experience a crash Flame 2.1 Environmental Variables: Device: Flame Master Build ID: 20140618040513 Gaia: 431aed0a7c7560c6eacd35ea69aa0a7a4ebe72c7 Gecko: 37f08ddaea48 Version: 33.0a1 (Master) Firmware Version: v121-2 User Agent: Mozilla/5.0 (Mobile; rv:33.0) Gecko/33.0 Firefox/33.0 Open_C 2.1 Environmental Variables: Device: Open_C Master Build ID: 20140618040513 Gaia: 431aed0a7c7560c6eacd35ea69aa0a7a4ebe72c7 Gecko: 37f08ddaea48 Version: 33.0a1 (Master) Firmware Version: P821A10V1.0.0B06_LOG_DL User Agent: Mozilla/5.0 (Mobile; rv:33.0) Gecko/33.0 Firefox/33.0 Buri 2.1 Environmental Variables: Device: Buri Master Build ID: 20140618073003 Gaia: 336c30b6147cdd9122ad0b2bbffb81eb869a9ec2 Gecko: 1cea544c74c5 Version: 33.0a1 (Master) MOZ Firmware Version: v1.2device.cfg User Agent: Mozilla/5.0 (Mobile; rv:33.0) Gecko/33.0 Firefox/33.0 Buri 2.0 Environmental Variables: Device: Buri 2.0 Build ID: 20140618063014 Gaia: 83844c7679b3b9f6e7f1116c1eeec2d1e7a64eec Gecko: 883d156210cf Version: 32.0a2 (2.0) MOZ Firmware Version: v1.2device.cfg User Agent: Mozilla/5.0 (Mobile; rv:32.0) Gecko/32.0 Firefox/32.0 Open_C 2.0 Environmental Variables: Device: Open_C 2.0 Build ID: 20140618000202 Gaia: 83844c7679b3b9f6e7f1116c1eeec2d1e7a64eec Gecko: 55679dc2e72b Version: 32.0a2 (2.0) Firmware Version: P821A10V1.0.0B06_LOG_DL User Agent: Mozilla/5.0 (Mobile; rv:32.0) Gecko/32.0 Firefox/32.0 _________________________________________________________________________________________ This issue does NOT reproduce on Flame 1.4, Buri 1.4 or Open C 1.4 When going to http://mozilla.github.io/qa-testcase-data/webapi/webrtc/mutedaudiotrack.html and hitting refresh on the page the phone will properly refresh Buri 1.4 Environmental Variables: Device: Buri 1.4 Build ID: 20140618063004 Gaia: fc74015d26bcbc3e31a45d34cb65777112a35982 Gecko: fab72d8aa2e0 Version: 30.0 (1.4) MOZ Firmware Version: v1.2device.cfg User Agent: Mozilla/5.0 (Mobile; rv:30.0) Gecko/30.0 Firefox/30.0 Flame 1.4 Environmental Variables: Device: Flame 1.4 Build ID: 20140618000203 Gaia: 3bdd037ec1a11abebe16a5d7f6ff0d863e80bc07 Gecko: 523491fa3339 Version: 30.0 (1.4) Firmware Version: v121-2 User Agent: Mozilla/5.0 (Mobile; rv:30.0) Gecko/30.0 Firefox/30.0 Open_C 1.4 Environmental Variables: Device: Open_C 1.4 Build ID: 20140618000203 Gaia: 3bdd037ec1a11abebe16a5d7f6ff0d863e80bc07 Gecko: 523491fa3339 Version: 30.0 (1.4) Firmware Version: P821A10V1.0.0B06_LOG_DL User Agent: Mozilla/5.0 (Mobile; rv:30.0) Gecko/30.0 Firefox/30.0
QA Whiteboard: [QAnalyst-Triage?]
status-b2g-v1.4:
--- → unaffected
Flags: needinfo?(ktucker)
Keywords: regression
Comment 3•6 years ago
|
||
Nominating this 2.0? since this is a regression and a 100% reproducible crash.
QA Whiteboard: [QAnalyst-Triage?] → [QAnalyst-Triage+]
Flags: needinfo?(ktucker)
Keywords: regressionwindow-wanted
Updated•6 years ago
|
blocking-b2g: --- → 2.0?
QA Whiteboard: [QAnalyst-Triage+]
Updated•6 years ago
|
Keywords: reproducible
Updated•6 years ago
|
Component: WebRTC → WebRTC: Audio/Video
Comment 4•6 years ago
|
||
It seems like this is related to the MSG rate change.
Assignee: nobody → paul
Updated•6 years ago
|
blocking-b2g: 2.0? → 2.0+
Updated•6 years ago
|
QA Contact: pcheng
Assignee | ||
Comment 5•6 years ago
|
||
Verified fixed on current Gecko master on a flame. Also include a crashtest based on the test case.
Attachment #8445744 -
Flags: review?(karlt)
Comment 6•6 years ago
|
||
Comment on attachment 8445744 [details] [diff] [review] Don't try to use a resampler when resampling segments to graph rate if we haven't instanciated one yet. r= I wonder whether the IsNull() tests/conditions in AudioSegment.h should be replaced with ChannelCount(), but that need not be addressed in this patch. > uint32_t inRate, outRate; Please remove these though.
Attachment #8445744 -
Flags: review?(karlt) → review+
Updated•6 years ago
|
Keywords: regressionwindow-wanted
Assignee | ||
Comment 7•6 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/6dd23fbc623c
Comment 8•6 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/6dd23fbc623c
Status: NEW → RESOLVED
Closed: 6 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Comment 9•6 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/17bc466733dd
You need to log in
before you can comment on or make changes to this bug.
Description
•