Bug 1028458 - Don't try to use a resampler when resampling segments to graph rate if we haven't instanciated one yet. r=karlt

--HG--
extra : rebase_source : 3b7696b3e89c1be0e338893578d81088f7182a3b